portfolio/programming/CPP/workspace_all/.metadata/.plugins/org.eclipse.cdt.ui/ex.4-6.build.log
15:15:09 **** Build of configuration Debug for project ex.4-6 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
Building file: ../ex.4-6.cpp
Invoking: Cygwin C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"ex.4-6.d" -MT"ex.4-6.o" -o "ex.4-6.o" "../ex.4-6.cpp"
../ex.4-6.cpp:22:11: warning: illegal character encoding in string literal [-Winvalid-source-encoding]
        cout <<"3<C0><C7> 2<BD><C2> : " <<power(3) <<endl;
                 ^~~~~~~~  ~~~~~~~~
../ex.4-6.cpp:23:11: warning: illegal character encoding in string literal [-Winvalid-source-encoding]
        cout <<"3<C0><C7> 4<BD><C2> : " <<power(3,4) <<endl;
                 ^~~~~~~~  ~~~~~~~~
../ex.4-6.cpp:26:5: error: redefinition of 'power'
int power(int x, int y)
    ^
../ex.4-6.cpp:12:5: note: previous definition is here
int power(int x, int y=2)
    ^
2 warnings and 1 error generated.
make: *** [ex.4-6.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

15:15:10 Build Failed. 2 errors, 2 warnings. (took 1s.28ms)

